# UTAD-POO-2021

./: .gitignore  README.md
Ex. 1.1/: Ex. 1.1.sln  Ex. 1.vcxproj
Ex. 1.2/: Ex. 1.2.cpp  Ex. 1.2.vcxproj  Ex. 1.2.vcxproj.filters
Ex. 1.3/: Ex. 1.3.cpp  Ex. 1.3.sln  Ex. 1.3.vcxproj  Ex. 1.3.vcxproj.filters
Ex. 1.4/: Ex. 1.4.cpp  Ex. 1.4.sln  Ex. 1.4.vcxproj  Ex. 1.4.vcxproj.filters
Ex. 2.1/: Ex. 2.1.cpp  Ex. 2.1.vcxproj
Ex. 2.2/: Ex. 2.2.vcxproj  Ex. 2.2.vcxproj.filters
Ex. 2.3/: Ex. 2.3.cpp  Ex. 2.3.sln  Ex. 2.3.vcxproj  Ex. 2.3.vcxproj.filters
Ex. 2.4/: Ex. 2.4.cpp  Ex. 2.4.vcxproj  alunos.txt
Ex. 3/: Data.cpp  Data.h  Ex. 3.cpp  Ex. 3.sln  Ex. 3.vcxproj  Ex. 3.vcxproj.filters
Ex. 4/: Ex. 4.vcxproj  Ex. 4.vcxproj.filters  Pessoa.cpp  Pessoa.h
Exercícios/Ex. 1.1/: CMakeLists.txt  Ex. 1.1.cpp  Ex. 1.vcxproj.filters
Exercícios/Ex. 1.3/: CMakeLists.txt  Ex. 1.3.cpp  Ex. 1.3.vcxproj
Exercícios/Ex. 1.4/: CMakeLists.txt  Ex. 1.4.cpp
Exercícios/Ex. 2.1/: Ex. 2.1.sln  Ex. 2.1.vcxproj  Ex. 2.1.vcxproj.filters
Exercícios/Ex. 2.2/: CMakeLists.txt  Ex. 2.2.cpp  Ex. 2.2.sln  Ex. 2.2.vcxproj  dados_saida.txt
Exercícios/Ex. 2.3/: Ex. 2.3.cpp  Ex. 2.3.vcxproj  alunos.txt
Exercícios/Ex. 2.4/: CMakeLists.txt  Ex. 2.4.sln  (+2 more)
Exercícios/Ex. 6/: Administrativo.cpp  Administrativo.h  Administrativos.txt  CMakeLists.txt  Ex. 6.cpp  Ex. 6.sln  Ex. 6.vcxproj  Ex. 6.vcxproj.filters  GestorFunc.cpp  GestorFunc.h  Operario.cpp  Operario.h  Operarios.txt  administrator.h  employee_manager.cpp  employee_manager.h  worker.h  workers.txt
Frequências/: Frequencia1_2019.txt
(+117 files in other folders)
